[gd_scene load_steps=10 format=2]

[ext_resource path="res://Placeholders/2D/guineapig.png" type="Texture" id=1]
[ext_resource path="res://Code/GuineaPig/FSM.gd" type="Script" id=2]
[ext_resource path="res://Code/GuineaPig/CHASE.gd" type="Script" id=3]
[ext_resource path="res://Code/GuineaPig/Guinea Base.gd" type="Script" id=4]
[ext_resource path="res://Code/GuineaPig/GUINEAIDLE.gd" type="Script" id=5]
[ext_resource path="res://Placeholders/GUI/sleep.png" type="Texture" id=6]
[ext_resource path="res://Fonts/ThaleahFat.ttf" type="DynamicFontData" id=7]

[sub_resource type="SphereShape" id=1]
radius = 1.67596

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 7 )

[node name="GuineaBase" type="KinematicBody" groups=[
"GUINEA",
]]
collision_layer = 2
collision_mask = 7
script = ExtResource( 4 )
MinReturnToChase = 2.0
MaxReturnToChase = 5.0
HP = 10
MaxHP = 10

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
billboard = 1
shaded = true
alpha_cut = 2
texture = ExtResource( 1 )

[node name="FSM" type="Spatial" parent="."]
script = ExtResource( 2 )
RootPath = NodePath("..")
ChaseVel = 6.0
PushForce = 10.0
PushY = 15.0

[node name="CHASE" type="Spatial" parent="FSM"]
script = ExtResource( 3 )
FSMPath = NodePath("..")

[node name="IDLE" type="Spatial" parent="FSM"]
script = ExtResource( 5 )
FSMPath = NodePath("..")

[node name="ChangeTarget" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ReturnToChase" type="Timer" parent="."]
one_shot = true

[node name="DizzyTimer" type="Timer" parent="."]

[node name="Dizzy" type="Sprite3D" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 1.48484, 1.61496, -0.445193 )
billboard = 1
alpha_cut = 2
texture = ExtResource( 6 )

[node name="HP" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="ChangeTarget" to="FSM/CHASE" method="_on_ChangeTarget_timeout"]
[connection signal="timeout" from="ReturnToChase" to="FSM/CHASE" method="_on_ReturnToChase_timeout"]
[connection signal="timeout" from="DizzyTimer" to="FSM/IDLE" method="_on_DizzyTimer_timeout"]
